--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "saudi-treasures-backend",
   "version": "1.0.0",
   "description": "Travel agency",
-  "main": "dist/app.js",
+  "main": "dist/server.ts",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && node dist/server.js",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -19,19 +20,39 @@
   },
   "homepage": "https://github.com/Ayomide57/saudi-treasures-backend#readme",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
+    "@types/jest": "^29.5.14",
+    "amadeus": "^11.0.0",
+    "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
+    "card-validator": "^10.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2"
+    "express-validator": "^7.2.1",
+    "googleapis": "^144.0.0",
+    "i18n": "^0.15.1",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.0",
+    "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
+    "ts-jest": "^29.2.5",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/express": "^5.0.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.1",
     "eslint": "^9.19.0",
+    "expect": "^29.7.0",
     "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
   }
