--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,13 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "forceConsistentCasingInFileNames": true
   },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+    "include": ["src/**/*", "tests/**/*", "tests"],
+    "exclude": ["node_modules","dist"]
+
 }
 
 //npx tsc
